test changement url image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="header">
-        <div class="row"><img class="logo" src="/home/enimad/Code_Projects/the_odin_project/landing-page/images/pexels-maksim-goncharenok-5820040.jpg" alt="logo ice cream">SupaIceCreamu</div>
+        <div class="row"><img class="logo" src="https://images.unsplash.com/photo-1552013208-0e1e26ab38a7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGljZSUyMGNyZWFtJTIwbmVvbnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=400&q=60" alt="logo ice cream">SupaIceCreamu</div>
         <div>
             <ul>
                 <li class="lii">Ice</li>
