ajout de toutes les images en version url web

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
                 <div class="txt1">Our IceCreamu is known worlwide to solve all of your problems. Heart problems, bone problems, hunger problems, problems problems, you will always find an adapted flavor to solve your very particular problem. Our team of experts only wears white coats and fully transparent glasses in order to achieve a scientific level of IceCreamu.</div>
                 <button class="button1">Click here to show some love to our experts team!</button>
             </div>
-            <img class="centralimg" src="/home/enimad/Code_Projects/the_odin_project/landing-page/images/brooke-lark-8beTH4VkhLI-unsplash.jpg" alt="Load of IceCreams"> </div>
+            <img class="centralimg" src="https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8aWNlJTIwY3JlYW18ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60" alt="Load of IceCreams"> </div>
        </div>
        <div class="content2">
            <div class="titre2">I love the smell of ice cream in the morning!</div>
            <div class="cards">
                <div class="cardandtext">
-                   <img class="card" src="/home/enimad/Code_Projects/the_odin_project/landing-page/images/dana-devolk-5-RS_ScO3X4-unsplash.jpg" alt="">
+                   <img class="card" src="https://images.unsplash.com/photo-1623595119708-26b1f7300075?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aWNlJTIwY3JlYW18ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60" alt="Ice cream with caramel topping">
                    <div class="description">Caramel beurre salé - One of our worlwide bestsellers, simple but incredibly good with its french salted butter caramel topping</div>
                 </div>
                 <div class="cardandtext">
-                    <img class="card" src="/home/enimad/Code_Projects/the_odin_project/landing-page/images/ian-dooley-TLD6iCOlyb0-unsplash.jpg" alt="">
+                    <img class="card" src="https://images.unsplash.com/photo-1497034825429-c343d7c6a68f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aWNlJTIwY3JlYW18ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60" alt="Two smashed ice cream balls">
                     <div class="description">Super smash balls - Because you're a fan of the Super Smash Bros and you love to see a ball of ice cream smash another ball of ice cream</div>
                  </div>
                  <div class="cardandtext">
-                    <img class="card" src="/home/enimad/Code_Projects/the_odin_project/landing-page/images/rachael-gorjestani-HLt6jQLf_J0-unsplash.jpg" alt="">
+                    <img class="card" src="https://images.unsplash.com/photo-1477505982272-ead89926a577?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8aWNlJTIwY3JlYW18ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60" alt="Ice cream with two balls">
                     <div class="description">Not the Super smash balls - Nothing to do with the Super smash balls, this is a perfectly round ball of ice cream on another perfectly round ball of ice cream, twins balls</div>
                  </div>
                  <div class="cardandtext">
-                    <img class="card" src="/home/enimad/Code_Projects/the_odin_project/landing-page/images/mark-cruz-Ov0u44CyGdM-unsplash.jpg" alt="">
+                    <img class="card" src="https://images.unsplash.com/photo-1502174832274-bc176e52765a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGljZSUyMGNyZWFtfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="Three ice cream with three persons holding it">
                     <div class="description">Friends - Our best deal, but for that you will need to have at least two friends to share with, or three arms I guess...</div>
                  </div>        
            </div>
